# trainpulse

./: .gitignore  Makefile  README.md  config.example.json  go.mod
.github/workflows/: ci.yml  release.yml
clients/python/: README.md  pyproject.toml
clients/python/src/trainpulse/: __init__.py  client.py
clients/python/tests/: test_client.py
cmd/trainpulse/: main.go
docs/: INTEGRATIONS.md
internal/agent/: agent.go  agent_test.go
internal/anomaly/: engine.go  engine_test.go  rules.go  rules_test.go
internal/api/: server.go  server_test.go
internal/collector/: collector.go  composite.go  fallback.go  fallback_test.go  host_linux.go  host_stub.go  nvidia_smi.go  nvidia_smi_test.go  sim.go
internal/config/: config.go  config_test.go
internal/correlate/: correlator.go
internal/dashboard/: render.go
internal/diagnostics/: infer.go
internal/events/: events.go
internal/framework/: adapter.go
internal/health/: scorer.go
internal/integrations/: catalog.go
internal/knowledge/: default.json  knowledge.go  knowledge_test.go
internal/logging/: logging.go
internal/metrics/: metrics.go  metrics_test.go
internal/model/: types.go
internal/optimizer/: optimizer.go  optimizer_test.go
internal/plugin/: plugin.go
internal/stream/: window.go
internal/version/: version.go
packaging/systemd/: trainpulse.service
